// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tag /> ColorVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag colorNeutral text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorWarning text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorBrand text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorError text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorYellow text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorSuccess text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
</div>
`;

exports[`<Tag /> Default story renders snapshot 1`] = `
<span
  class="tag colorWarning text text--sm text--bold-weight"
>
  ​
  <span
    class="body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> OutlineVariants story renders snapshot 1`] = `
<div
  class="tagList"
>
  <span
    class="tag colorNeutral outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorWarning outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorBrand outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorError outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorYellow outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
  <span
    class="tag colorSuccess outline text text--sm text--bold-weight"
  >
    ​
    <span
      class="body"
    >
      Tag text
    </span>
  </span>
</div>
`;

exports[`<Tag /> WithIcon story renders snapshot 1`] = `
<span
  class="tag colorWarning text text--sm text--bold-weight"
>
  <svg
    class="svgIcon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      warning
    </title>
    <path
      d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
    />
  </svg>
  ​
  <span
    class="body"
  >
    Tag text
  </span>
</span>
`;

exports[`<Tag /> WithLongTextAndIcon story renders snapshot 1`] = `
<span
  class="tag colorWarning text text--sm text--bold-weight"
>
  <svg
    class="svgIcon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      warning
    </title>
    <path
      d="M4.47 21h15.06c1.54 0 2.5-1.67 1.73-3L13.73 4.99c-.77-1.33-2.69-1.33-3.46 0L2.74 18c-.77 1.33.19 3 1.73 3zM12 14c-.55 0-1-.45-1-1v-2c0-.55.45-1 1-1s1 .45 1 1v2c0 .55-.45 1-1 1zm1 4h-2v-2h2v2z"
    />
  </svg>
  ​
  <span
    class="body"
  >
    This tag has a really long text message
  </span>
</span>
`;
